CssTextTask/wwwroot/css/StyleSheet.css
* {
    box-sizing: border-box;
}



.main-container {
    font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
    font-size: 15px;
    color: #676565;
    background-color: #feeed6;
    max-width: 747px;
    margin: 0 0 0 0;
    padding: 10px 14px 10px 14px;
}

    .main-container * {
        margin: 0 0 0 0;
        padding: 0 0 0 0;
    }

    .main-container .header h1 {
        font-weight: lighter;
        font-size: 28px;
        line-height: 32px;
        margin-bottom: 11px;
    }

    .main-container .prices-conditions {
        font-size: 16px;
        margin-bottom: -3px;
    }

        .main-container .prices-conditions p {
            font-size: 16px;
            margin-bottom: 11px;
        }

            .main-container .prices-conditions p .text-big-blue {
                color: #378db2;
                font-weight: 700;
            }

            .main-container .prices-conditions p .discounted-price {
                text-decoration: line-through
            }

    .main-container .text-block {
        word-spacing: 45%;
        line-height: 22px;
        text-indent: 16px;
    }

        .main-container .text-block p:not(:last-child) {
            margin-bottom: 10px;
        }

